2008-11-03  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=22041
        Fix CURL crashes on the test suite

        Fix segfault with setDefersLoading(). Do not call into curl when we
        don't have a CURL handle.

        It is attempted to defer the loading before the load has been
        started (no curl handle was allocated yet). If that happens then
        just remember that. ResourceHandleManager::startJob is already taking
        care of this and in initResourceHandle the the downloading will
        be paused if needed.

        Fixes fast/loader/simultaneous-reloads-assert.html

        * platform/network/curl/ResourceHandleCurl.cpp:
        (WebCore::ResourceHandle::setDefersLoading):

2008-11-03  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=22041
        Fix CURL crashes on the test suite

        Do not send "no data" to WebCore in parseDataUrl().

        Fixes assert on fast/tokenizer/image-empty-crash.html

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl):

2008-11-02  Xan Lopez  <xan@gnome.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=22009
        HTML5 Video with GStreamer pulls gnome-vfs without using it

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        Remove gnome-vfs include.

2008-11-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        Be sure to check the final URLs of requested resources to make sure we
        don't get fooled by HTTP redirects.

        https://bugs.webkit.org/show_bug.cgi?id=21963

        Tests: http/tests/security/xss-DENIED-xsl-document-redirect.xml
               http/tests/security/xss-DENIED-xsl-external-entity-redirect.xml

        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::openFunc):